--- a/trilha-Explore/style.css
+++ b/trilha-Explore/style.css
@@ -7,7 +7,6 @@
 body{
     display: flex;
     justify-content: center;
-    align-items: center;
     flex-direction: column;
     width: 75rem;
     height: 58.125rem;
@@ -36,27 +35,51 @@ main{
 
 header{
     display: flex;
-    align-items: center;
     justify-content: center;
+    align-items: center;
     width: 100%;
     height: 8rem;
+    margin-top: 2rem;
 }
 
 header div{
     display: flex;
     justify-content: center;
     align-items: center;
-    width: 7.9rem;
-    height: 7.9rem;
-    background: linear-gradient(90deg, #9572FC 0%, #43E7AD 50.52%, #E2D45C 100%);
+    width: 7.7rem;
+    height: 7.7rem;
+    padding: 0.25rem;
+    background-image: linear-gradient(90deg, #9572FC 0%, #43E7AD 50.52%, #E2D45C 100%);
     border-radius: 50%;
+    transition: transform 0.3s;
+    animation: fromTop 0.3s 0.2s backwards;
+}
+
+header div:hover{
+    transform: scale(1.1);
 }
 
 header img{
-    width: 7.5rem;
-    height: 7.5rem;
+    width: 100%;
+    height: 100%;
     border-radius: 50%;
 }
+
+/* Animation do header */
+
+@keyframes fromTop{
+    from{
+        opacity: 0;
+        transform: translateY(-30px);
+    }
+
+    to{
+        opacity: 1;
+        transform: translateY(0);
+    }
+}
+
+/* ------------------ */
 
 main{
     display: grid;
@@ -66,7 +89,7 @@ main{
     width: 90%;
     max-height: 43.875rem;
     gap: 1.5rem;
-    margin-top: 2rem;
+    margin: 2rem auto;
 }
 
 section{
@@ -75,7 +98,36 @@ section{
     border-radius: 0.625rem;
     padding-top: 0.25rem;
     background-image: linear-gradient(90deg, rgba(149,115,252,1) 0%, rgba(67,231,173,1) 50.52%, rgba(226,212,92,1) 100%);
+    animation: fromBottom 0.3s backwards;
 }
+
+main section:nth-child(1) {
+    animation-delay: 0;
+}
+
+main section:nth-child(2) {
+    animation-delay: 0.4s;
+}
+
+main section:nth-child(3) {
+    animation-delay: 0.7s;
+}
+
+/* Animation dos cards*/
+
+@keyframes fromBottom{
+    from{
+        opacity: 0;
+        transform: translateY(30px);
+    }
+
+    to{
+        opacity: 1;
+        transform: translateY(0);
+    }
+}
+
+/* ------------------ */
 
 article{
     display: flex;
@@ -115,6 +167,14 @@ ul{
     margin-top: 1.5rem;
 }
 
+section ul li{
+    transition: transform 0.3s;
+}
+
+section ul li:hover{
+    transform: scale(1.1);
+}
+
 #game img{
     width: 5.625rem;
     height: 7.5rem;
@@ -124,6 +184,8 @@ ul{
 #streamer img{
     width: 4.375rem;
     height: 4.375rem;
+    border-radius: 50%;
+    border: 1px solid #443E54;
 }
 
 #rede img{
