--- a/trilha-ignite/mobile/pages/anuncios/style.css
+++ b/trilha-ignite/mobile/pages/anuncios/style.css
@@ -23,3 +23,131 @@ body *{
     color: #FFFFFF;
     font-family: 'Inter', sans-serif;
 }
+
+header img{
+    width: 100%;
+    height: 2.875rem;
+}
+
+main{
+    display: flex;
+    align-items: center;
+    flex-direction: column;
+    width: 100%;
+    height: auto;
+    padding: 0 0 0 2rem;
+}
+
+main .header{
+    display: flex;
+    align-items: center;
+    width: 100%;
+    height: 3.6rem;
+    gap: 6rem;
+    margin-bottom: 2rem;
+}
+
+.logo{
+    width: 4.454rem;
+    height: 3.5rem;
+}
+
+.imageBg{
+    width: 19.438rem;
+    height: 10rem;
+    text-align: center;
+    border-radius: 0.5rem;
+    margin-bottom: 1.5rem;
+}
+
+section{
+    display: flex;
+    flex-direction: column;
+    width: 100%;
+    height: 23.25rem;
+    gap: 1rem;
+}
+
+h1{
+    width: 100%;
+    height: 2.375rem;
+    font-weight: 900;
+    font-size: 1.5rem;
+    letter-spacing: -0.47px;
+}
+
+p{
+    width: 100%;
+    height: 1.625rem;
+    font-size: 1rem;
+    font-weight: 400;
+    color: #A1A1AA;
+    letter-spacing: -0.18px;
+}
+
+article{
+    display: flex;
+    flex-direction: column;
+    width: 11.25rem;
+    height: 19.5rem;
+    background: #2A2634;
+    border-radius: 0.375rem;
+    gap: 1rem;
+    padding: 1.25rem 0 1.25rem 1.25rem;
+}
+
+article div{
+    display: flex;
+    flex-direction: column;
+    width: 100%;
+    height: 2.375rem;
+}
+
+article p{
+    width: 100%;
+    height: 1.063rem;
+    font-weight: 400;
+    font-size: 0.875rem;
+    line-height: 1.063rem;
+}
+
+h2{
+    display: flex;
+    width: 100%;
+    height: 1.063rem;
+    font-weight: 700;
+    font-size: 0.875rem;
+    line-height: 1.063rem;
+}
+
+a{
+    color: #34D399;
+    text-decoration: none;
+}
+
+button{
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    width: 8.75rem;
+    height: 2.25rem;
+    background: #8B5CF6;
+    border-radius: 0.375rem;
+    border: 0;
+    font-weight: 600;
+    font-size: 0.875rem;
+    line-height: 1.875rem;
+    letter-spacing: -0.18px;
+    gap: 0.5rem;
+    cursor: pointer;
+}
+
+button svg{
+    width: 1.25rem;
+    height: 1.25rem;
+}
+
+footer img{
+    width: 100%;
+    height: 2.125rem;
+}
