--- a/trilha-ignite/website/style.css
+++ b/trilha-ignite/website/style.css
@@ -7,12 +7,149 @@
 body{
     display: flex;
     justify-content: center;
+    align-items: center;
     flex-direction: column;
-    width: 75rem;
-    height: 58.125rem;
-    background-image: url(./assets/bg.jpg);
+    width: 90rem;
+    height: 61.063rem;
+    background-image: url(./assets/bg.png);
     background-position: top center;
     background-size: 100% auto;
     background-repeat: no-repeat;
     background-color: #121214;
+}
+
+body *{
+    line-height: 160%;
+    font-family: "Inter", sans-serif;
+    color: #FFFFFF;
+}
+
+header{
+    margin-bottom: 5rem;
+}
+
+header img{
+    width: 17.814rem;
+    height: 10rem;
+}
+
+main{
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    flex-direction: column;
+    width: 84rem;
+    height: 32.813rem;
+}
+
+main h1{
+    font-size: 4rem;
+    font-weight: 900;
+    line-height: 4.813rem;
+    letter-spacing: -1.43px;
+    margin-bottom: 4rem;
+}
+
+span{
+    color: linear-gradient(90deg, rgba(149,115,252,1) 0%, rgba(67,231,173,1) 50.52%, rgba(226,212,92,1) 100%);
+}
+
+section{
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    width: 84rem;
+    height: 15rem;
+    gap: 1.5rem;
+    margin-bottom: 2rem;
+}
+
+ul{
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    list-style: none;
+    width: auto;
+    height: 100%;
+    gap: 1.5rem;
+}
+
+ul li{
+    width: 11.25rem;
+    height: 100%;
+    border-radius: 0.5rem;
+    position: relative;
+    float: left;
+}
+
+a{
+    z-index: -1;
+}
+
+li img{
+    width: 100%;
+    height: 100%;
+    border-radius: 0.5rem;
+}
+
+li div{
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    flex-direction: column;
+    background: linear-gradient(180deg, rgba(0, 0, 0, 0) 0%, rgba(0, 0, 0, 0.9) 67.08%);
+    width: 100%;
+    height: 7.5rem;
+    position: absolute;
+    top: 44%;
+    border-radius: 0.5rem;
+}
+
+article{
+    width: 75rem;
+    height: 7rem;
+    padding-top: 3px;
+    background: linear-gradient(90deg, #9572FC 0%, #43E7AD 50.52%, #E2D45C 100%);
+    border-radius: 0.5rem;
+}
+
+.container{
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
+    background: #2A2634;
+    width: 100%;
+    height: 100%;
+    border-radius: 0.6rem;
+    padding: 1.5rem 2rem;
+    gap: 35.313rem;
+}
+
+article h2{
+    font-size: 1.5rem;
+    font-weight: 900;
+    letter-spacing: -0.47px;
+}
+
+article p{
+    font-size: 1rem;
+    font-weight: 400;
+    letter-spacing: -0.18px;
+    color: #A1A1AA;
+}
+
+button{
+    display: flex;
+    align-items: center;
+    background: #8B5CF6;
+    width: 12.063rem;
+    height: 3rem;
+    gap: 0.75rem;
+    padding: 0.75rem 1rem;
+    border: 0;
+    border-radius: 0.375rem;
+    font-weight: 500;
+    font-size: 1rem;
+    line-height: 1.188rem;
+    letter-spacing: -0.18px;
 }
