--- a/trilha-ignite/website/style.css
+++ b/trilha-ignite/website/style.css
@@ -42,7 +42,7 @@ main{
     height: 32.813rem;
 }
 
-main h1{
+.title{
     font-size: 4rem;
     font-weight: 900;
     line-height: 4.813rem;
@@ -94,15 +94,33 @@ li img{
 
 li div{
     display: flex;
-    align-items: center;
-    justify-content: center;
+    justify-content: flex-end;
     flex-direction: column;
     background: linear-gradient(180deg, rgba(0, 0, 0, 0) 0%, rgba(0, 0, 0, 0.9) 67.08%);
     width: 100%;
     height: 7.5rem;
     position: absolute;
-    top: 44%;
+    top: 50.3%;
     border-radius: 0.5rem;
+    padding: 1rem;
+    gap: 0.25rem;
+}
+
+li h1{
+    height: 1.188rem;
+    font-size: 1rem;
+    font-weight: 700;
+    line-height: 1.188rem;
+    letter-spacing: -0.18px;
+}
+
+li p{
+    height: 1.063rem;
+    font-size: 0.875rem;
+    font-weight: 400;
+    line-height: 1.063rem;
+    letter-spacing: -0.18px;
+    color: #D4D4D8;
 }
 
 article{
